--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
-    </div>
-  </section>
-  </body>
+  <section class="hero is-fullheight has-background-black">
+    <div class="hero-body">
+        <div class="container">
+
+                  <h1 class="title">
+                    The Speakeasy
+                  </h1>
+                  <p class="subtitle">
+                    My first website with <strong>Bulma</strong>!
+                  </p>
+                  <figure>
+                  <img src="" alt="martini glass log" style="max-width: 512px;">
+                </figure>
+          </div>
+        </div>
+      </section>
+    </body>
 </html>
