--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Rubik:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
@@ -21,10 +21,12 @@
                     My first website with <strong>Bulma</strong>!
                   </p>
                   <figure>
-                  <img src="" alt="martini glass log" style="max-width: 512px;">
+                  <img src="assets\Images\martini glass.png" alt="martini glass log" style="max-width: 512px;">
                 </figure>
           </div>
         </div>
       </section>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+      <script src="./assets/script.js"></script>
     </body>
 </html>
