--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title>The Speakeasy!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -11,19 +11,33 @@
   <body>
   <section class="hero is-fullheight has-background-black">
     <div class="hero-body">
-        <div class="container">
-
+        <div class="container is-mobile is-marginless heading has-text-weight-bold">
+            <figure class="logo">
+              <img src="./assets/images/the speakeasy.png" alt="martini glass log" style="max-width: 112px;">
+            </figure>
                   <h1 class="title">
                     The Speakeasy
                   </h1>
                   <p class="subtitle">
-                    My first website with <strong>Bulma</strong>!
+                    Martini Coders website with <strong>Bulma</strong>!
                   </p>
-                  <figure>
-                  <img src="" alt="martini glass log" style="max-width: 512px;">
-                </figure>
+
+                  <!-- Text input to search for a cocktail -->
+                  <div class="field" style="width: 234px;">
+                    <label class="label">Cocktail</label>
+                    <div class="control">
+                      <input class="input" type="text" placeholder="input cocktail">
+                    </div>
+                  </div>
+
+                  <!-- Search button  -->
+                  <div class="field is-grouped">
+                    <div class="control">
+                      <button class="button is-link" style="width: 234px;">Search</button>
+                    </div>
           </div>
         </div>
       </section>
+      <script src="./assets/script.js"></script>
     </body>
 </html>
