added youtube iframe

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <!-- Search button  -->
                   <div class="field is-grouped">
                     <div class="control">
-                      <button class="button is-success" style="width: 234px;">Search</button>
+                      <button class="button is-success" id="btnSearch" style="width: 234px;">Search</button>
                     </div>
         </aside>
 
@@ -65,7 +65,9 @@
               <div class="column">
                 <div class="notification is-warning">
                   <h1 class="title is-size-4">Mojito</h1>
-                  Bloody mary glogg the blenheim saketini ectoplasm dom chivas regal. Singapore sling, “anisette hurricane talisker blair athol greyhound paralyzer,” christian brothers black tooth grin.” Savoy affair; bronx ketel one glen elgin blue hawaii sea breeze crown royal kamikaze, bladnoch, macduff aultmore.French 75 smoky martini b & b linkwood appletini.
+                  <figure class="image is-16by9">
+                    <iframe class="has-ratio" width="340" height="180" src="https://www.youtube.com/embed/YE7VzlLtp-4" frameborder="0" allowfullscreen></iframe>
+                  </figure>
                 </div>      
               </div>
             </div>
