added placeholder but not in the right place

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                     <div class="control">
                       <button class="button is-success" id="btnSearch" style="width: 234px;">Search</button>
                     </div>
+                    <!-- image of the searched cocktail -->
+                  
         </aside>
 
           <div class="container">
