--- a/search.html
+++ b/search.html
@@ -37,12 +37,12 @@
                     
                     <!-- Text input to search for a cocktail -->
                     <div class="control">
-                      <input class="input mb-4" type="text" placeholder="input cocktail">
+                      <input id="userInput" class="input mb-4" type="text" placeholder="input cocktail">
                     </div>
 
                     <!-- Search button -->
                     <div class="control">
-                      <button class="button is-success mt-4" id="btnSearch" style="width: 234px;">Search</button>
+                      <button class="button is-success mt-4" id="search" style="width: 234px;">Search</button>
                     </div>
                   </div>  
                 </article>
@@ -52,11 +52,9 @@
                     <img src="https://bulma.io/images/placeholders/256x256.png">
                   </figure>
                   <!-- searched recipe -->
-                  <h1 class="title is-size-4 my-4 has-text-centered">Old Fashion</h1>
-                  Cutty sark scots whisky van winkle family reserve zombie, springbank lime rickey, widow’s cork. Glen
-                  scotia redline godfather bowmore bull shot aberlour gummy and coke snowball aberfeldy harvey wallbanger.
-                  Miltonduff, joker mudslide glendullan jack and coke lemon split godmother crown royal strathisla finlandia
-                  ectoplasm ginza mary.
+                  <h1 id="drinkName" class="title is-size-4 my-4 has-text-centered"></h1>
+                  <div id="drinkIngr"></div>
+                  <div id="drinkInst"></div> 
                 </article>
               </div>
             </div>
@@ -122,15 +120,15 @@
             </div>
           <div class="container-max-width-780px is-flex-direction-column">
             <figure class="image is-16by9">
-              <iframe class="has-ratio" width="340" height="180" src="https://www.youtube.com/embed/YE7VzlLtp-4"
+              <iframe id="youTubeVid1" class="has-ratio" width="340" height="180" 
               frameborder="0" allowfullscreen></iframe>
             </figure>
             <figure class="small-video  image is-13by4 display is-inline">
-              <iframe class="has-ratio" width="340" height="180" src="https://www.youtube.com/embed/YE7VzlLtp-4"
+              <iframe id="youTubeVid2" class="has-ratio" width="340" height="180" 
               frameborder="0" allowfullscreen></iframe>
             </figure>
             <figure class="image is-13by4 display is-inline">
-              <iframe class="small-video has-ratio" width="340" height="180" src="https://www.youtube.com/embed/YE7VzlLtp-4"
+              <iframe id="youTubeVid3" class="small-video has-ratio" width="340" height="180" 
               frameborder="0" allowfullscreen></iframe>
             </figure>
 
