ammended class attributes for youtube function

--- a/search.html
+++ b/search.html
@@ -118,21 +118,7 @@
                 </div>
               </div>
             </div>
-          <div class="container-max-width-780px is-flex-direction-column">
-            <figure class="image is-16by9">
-              <iframe id="youTubeVid1" class="has-ratio" width="340" height="180" 
-              frameborder="0" allowfullscreen></iframe>
-            </figure>
-            <figure class="small-video  image is-13by4 display is-inline">
-              <iframe id="youTubeVid2" class="has-ratio" width="340" height="180" 
-              frameborder="0" allowfullscreen></iframe>
-            </figure>
-            <figure class="image is-13by4 display is-inline">
-              <iframe id="youTubeVid3" class="small-video has-ratio" width="340" height="180" 
-              frameborder="0" allowfullscreen></iframe>
-            </figure>
-
-          </div>
+          <div id="youTubeVid1" class="container-max-width-780px is-flex-direction-column">         </div>
           
         </div>
         
