--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container2">
             <h1>Speakeasy</h1>
             
-            <button class="btn">
+            <button class="btn button is-large">
                 <a href="search.html">Enter</a>
                 
             </button>
