--- a/search.html
+++ b/search.html
@@ -7,17 +7,20 @@
     <title>Speakeasy</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 
   <body>
-
     <!-- hero class of header  -->
     <section class="hero">
       <div class="hero-body">
         <div class="container is-marginless heading">
-          <figure class="logo"> <h1>Speakeasy</h1> </figure>
+          <span class="material-symbols-outlined">
+            local_bar
+            </span>
+          <figure class="logo"><p><span class="material-symbols-outlined">Speakeasy</span></p> </figure>
           </figure>
         </div>
       </div>
@@ -91,11 +94,7 @@
             <div class="columns">
               <div class="column is-one-third ">
                 <div class="notification is-dark">
-                  <!-- <figure class="media-left"> -->
-                    <!-- <span class="icon is-medium">
-                          <i class="fa-solid fa-whiskey-glass-ice"></i>
-                        </span> -->
-                  <!-- </figure> -->
+          
                   <h1 class="title is-size-4 mb-4 has-text-centered has-text-white">Old Fashioned</h1>
                   <p>The old fashioned is a cocktail made by muddling sugar with bitters and water, adding whiskey, and garnishing with an orange slice or zest and a cocktail cherry. 
                     It is traditionally served with ice in an old fashioned glass (also known as a rocks glass), which predated the cocktail.</p>
