--- a/search.html
+++ b/search.html
@@ -100,7 +100,7 @@
                   <p>The old fashioned is a cocktail made by muddling sugar with bitters and water, adding whiskey, and garnishing with an orange slice or zest and a cocktail cherry. 
                     It is traditionally served with ice in an old fashioned glass (also known as a rocks glass), which predated the cocktail.</p>
                   <br>
-                  <img class="oldfashioned" src="/assets/Images/old-fashioned.png">
+                  <img class="oldfashioned" src="./assets/Images/old-fashioned.png">
                 </div>
               </div>
               <div class="column">
@@ -111,7 +111,7 @@
                     the cosmopolitan also bears a likeness in composition to the kamikaze cocktail. </p>
                   
                   <br>
-                  <img class="drinks" src="/assets/Images/cosmo2.png">
+                  <img class="drinks" src="./assets/Images/cosmo2.png">
                 </div>
               </div>
               <div class="column">
@@ -119,7 +119,7 @@
                   <h1 class="title is-size-4 mb-4 has-text-centered">Mojito</h1>
                   <p>Mojito is a traditional Cuban punch. The cocktail often consists of five ingredients: white rum, sugar, lime juice, soda water, and mint. Its combination of sweetness, citrus, and herbaceous mint flavors is intended to complement the rum, and has made the mojito a popular summer drink. </p>
                   <br>
-                  <img class="mojito" src="/assets/Images/mojito.png">
+                  <img class="mojito" src="./assets/Images/mojito.png">
 
                 </div>
               </div>
