--- a/search.html
+++ b/search.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Speakeasy</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
@@ -133,7 +133,22 @@
           <!-- need to decide if we are going to append here or new page -->
       </section>
     </main>
-    <footer class="footer has-background-black"></footer>
+    <footer class="footer has-background-black">
+
+        <div class="content has-text-centered ">
+          <p>
+            <strong>Speakeasy</strong> by <a href=https://github.com/jkanvision/The-SpeakEasy-Project">Martini Coders</a>. The source code is licensed
+            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+            is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+          </p>
+        
+        </div>
+    </footer>
+
+
+
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="./assets/script.js"></script>
   </body>
