--- a/search.html
+++ b/search.html
@@ -146,7 +146,7 @@
 
         <div class="content has-text-centered ">
           <p>
-            <strong>Speakeasy</strong> by <a href=https://github.com/jkanvision/The-SpeakEasy-Project">Martini Coders</a>. The source code is licensed
+            <strong>Speakeasy</strong> by <a href="https://github.com/jkanvision/The-SpeakEasy-Project">Martini Coders</a>. The source code is licensed
             <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
             is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
           </p>
