--- a/search.html
+++ b/search.html
@@ -32,8 +32,12 @@
                 <article class="tile is-child notification ">
                   <div id="cocktailSearch" class="field" style="width: 350px;">
                     <br>
+                    
+                    <div class="button is-primary mt-4 has-background-black has-text-centered ml-5" style="width: 300px;>
+                    <label class="label is-size-4 has-text-centered has-text-white">Search for a Cocktail</label>
+                    </div>
                     <br>
-                    <label class="label is-size-4 has-text-centered">Search for a Cocktail</label>
+                    <br>
                     <div class="control">
                       <input id="userInput" class="input mb-4 " type="text" placeholder="input cocktail">
                     </div>
@@ -90,7 +94,7 @@
               <figure class="image is-48x48 ml-5">
                <!-- <img src=".\assets\Images\martini glass.png"> -->
               </figure>
-              <h1 class="title has-text-centered mb-6 has-text-white"> Recommendations</h1>
+              <h1 class="title has-text-centered mb-6 has-text-white"> Top Shelf Recommendations</h1>
             </div>
             
             <div class="columns">
