--- a/search.html
+++ b/search.html
@@ -17,8 +17,11 @@
     <section class="hero">
       <div class="hero-body">
         <div class="container is-marginless heading">
-          <figure class="logo"> <h1>Speakeasy</h1> </figure>
+          <figure class="logo has-text-white"> <h6>Speakeasy</h6> </figure>
           </figure>
+          <figure class="subtitle has-text-white"> <h2>The place to get information about any drink</h2> </figure>
+          </figure>
+
         </div>
       </div>
     </section>
@@ -34,7 +37,7 @@
                     <br>
                     
                     <div class="button is-primary mt-4 has-background-black has-text-centered ml-5" style="width: 300px;>
-                    <label class="label is-size-4 has-text-centered has-text-white">Search for a Cocktail</label>
+                    <label class="label is-size-4 has-text-centered has-text-white">Get a Drink</label>
                     </div>
                     <br>
                     <br>
@@ -42,7 +45,7 @@
                       <input id="userInput" class="input mb-4 " type="text" placeholder="input cocktail">
                     </div>
                     <div class="control">
-                      <button class="button is-primary mt-4 has-background-black has-text-centered ml-6 " id="search" style="width: 234px;">Search</button>
+                      <button class="button is-primary mt-4 has-background-danger has-text-centered ml-6 " id="search" style="width: 234px;">Search</button>
                     </div>
                   </div>
                   <!-- this button asks the user if they want another drink and reloads the page -->
