finishing code for localstorage function

--- a/search.html
+++ b/search.html
@@ -36,16 +36,18 @@
                   <div id="cocktailSearch" class="field" style="width: 350px;">
                     <br>
                     
-                    <div class="button is-primary mt-4 has-background-black has-text-centered ml-5" style="width: 300px;>
+                    <div class="button is-primary mt-4 has-background-black has-text-centered ml-5" style="width: 320px;">
                     <label class="label is-size-4 has-text-centered has-text-white">Get a Drink</label>
                     </div>
                     <br>
                     <br>
-                    <div class="control">
-                      <input id="userInput" class="input mb-4 " type="text" placeholder="input cocktail">
-                    </div>
-                    <div class="control">
-                      <button class="button is-primary mt-4 has-background-danger has-text-centered ml-6 " id="search" style="width: 234px;">Search</button>
+                    <div class="field has-addons">
+                      <div class="control">
+                        <input id="userInput" class="input" type="text" style="width:280px" placeholder="What'll You Have?">
+                      </div>
+                      <div class="control">
+                        <a class="button is-primary has-background-danger has-text-centered" id="search">Search</a>
+                      </div>
                     </div>
                   </div>
                   <!-- this button asks the user if they want another drink and reloads the page -->
