top shelf recommedations to stack need to adjust the size

--- a/search.html
+++ b/search.html
@@ -29,10 +29,10 @@
 
     <main>
       <section class="section">
-        <div class="tile is-ancestor is-mobile">
-          <div class="tile is-vertical is-8">
-            <div class="tile">
-              <div class="tile is-parent is-vertical">
+        <div>
+          <div class="columns is-vcentered">
+            <div class="tile is-size-5-mobile">
+              <div class="tile is-parent is-vertical is-size-5-mobile">
                 <article class="tile is-child notification ">
                   <div id="cocktailSearch" class="field" style="width: 350px;">
                     <br>
@@ -96,15 +96,15 @@
   
   
           <div class="container column">
-            <div class="box mb-2 has-background-black">
+            <div class="box mb-2 has-background-black column is-3-desktop">
               <figure class="image is-48x48 ml-5">
                <!-- <img src=".\assets\Images\martini glass.png"> -->
               </figure>
               <h1 class="title has-text-centered mb-6 has-text-white"> Top Shelf Recommendations</h1>
             </div>
             
-            <div class="columns is-mobile">
-              <div class="column is-one-third ">
+            <div class="column is-size-5-mobile is-one-third">
+              <div class="column">
                 <div class="notification is-dark">
           
                   <h1 class="title is-size-4 mb-4 has-text-centered has-text-white">Old Fashioned</h1>
