hide top shelf rec and colums

--- a/search.html
+++ b/search.html
@@ -94,7 +94,7 @@
           
   
   
-          <div class="container column">
+          <div class="container column" id="old">
             <div class="box mb-2 has-background-black">
               <figure class="image is-48x48 ml-5">
                <!-- <img src=".\assets\Images\martini glass.png"> -->
