changed the bulma footer text to white

--- a/search.html
+++ b/search.html
@@ -15,19 +15,18 @@
 
   <body>
     <!-- hero class of header  -->
-    <section class="hero is-mobile">
-      <div class="hero-body">
+    <div class="container">
+    <section class="hero columns is-mobile">
+      <div class="hero-body column">
         <div class="is-marginless heading">
-          <figure class="logo has-text-white"> <h6>Speakeasy</h6> </figure>
+          <figure class="logo has-text-white"> <h6 class="speakeasy">Speakeasy</h6> </figure>
           </figure>
           <figure class="subtitle has-text-white"> <h2>The place to get information about any drink</h2> </figure>
           </figure>
-
+          </div>
         </div>
-      </div>
     </section>
 
-    <main>
       <section class="container">
         <div class="columns">
           <div class="column is-vcentered">
@@ -139,12 +138,11 @@
           <div id="youTubeVid1" class="container-max-width-780px is-flex-direction-column">         </div>
           
         </div>
-        
+      </div>
           <!-- <footer class="footer has-background-black"></footer> -->
 
           <!-- need to decide if we are going to append here or new page -->
       </section>
-    </main>
 
     <!-- <footer class="footer has-background-black">
 
@@ -162,31 +160,31 @@
 <main class="hero-foot center" style="padding: 2rem;">
   <div id="grid" style="width: 768px;">
     <div id="a" class="center-column">
-      <p class="has-text-centered has-text-black">
+      <p class="has-text-centered has-text-white">
         How about you enjoy a relaxing cocktail at speakeasy<br>
         wonderful taste, presentation and kick. 
       </p>
     </div>
     <div id="b" class="center-column">
-      <p class="title has-text-black">
-        <i class="icon from google has text-grey-light" 
+      <p class="title has-text-white">
+        <i class="icon from google has-text-white" 
         style="width: 0.75em; height: 0.75em;"></i>
-        1.5<span class="is-size-5">drinks to feel a buzz</span>
+        1.5<span class="is-size-5"> drinks to feel a buzz</span>
       </p>
-      <p class="subtitle has-text-black is-7">0-10 DPH</p>
+      <p class="subtitle has-text-white is-7">0-3 DPH</p>
     </div>
     <div id="c" class="center-column" style="border-left: 1px solid gray">
-      <p class="title has-text-black"><span class="is-size-5">+</span>95<span
+      <p class="title has-text-white"><span class="is-size-5">+</span>95<span
         class="is-size-5">% alcohol by volume</span></p>
       <p class="subtitle is-7 has-text-white">Top liquors in the world</p>
     </div>
     <div id="d" class="center-column" style="border-left: 1px solid gray;">
-    <p class="title has-text-black">3</span><span class="is-size-5">Drinks Limit</span></p>
-    <p class="subtitle is-7 has-text-black">then your cut off</p>
+    <p class="title has-text-white">3</span><span class="is-size-5"> Drinks Limit</span></p>
+    <p class="subtitle is-7 has-text-white">then your cut off</p>
     </div>
     <div id="e" class="center-column">
       <a class="button is-danger is-inverted is-rounded is-outlined has-text-weight-bold"
-      style="width: 100%; border: 0.15em solid black;">
+      style="width: 100%; margin: 10px; border: 0.15em solid whitesmoke;">
       Order Now
       </a>
     </div>
