added some border boxes

--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Speakeasy</title>
-    <script rel="stylesheet" href="/assets/Font/Aclonica-Regular.ttf"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/cover.css">
+    <script src="https://kit.fontawesome.com/7c84e92252.js"></script>
   </head>  
 
   <body>
     <header>
-      <h1>Speakeasy</h1>
-        <h2>Martini Coders</h2>
+        <i class="fa-solid fa-martini-glass fa-2xl"></i>
+          <h1>Speakeasy</h1>
+            <nav>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Resources</a></li>
+              </ul>
+            </nav>
     </header>
     
     <main>
@@ -22,7 +30,7 @@
           <h3>UCF Coding Bootcamp Project 1</h3>
         <div>
           <p>The phrase, 'Speakeasy' originates from a term that bartenders used where people needed to</p> 
-          <h3>“speak easy” (quietly)</h3>
+          <h3>“Speakeasy” (quietly)</h3>
           <ul>
             <li>when ordering at the bar in order to not draw attention</li> 
             <li>to the prohibited act of buying alcohol</li>
@@ -60,7 +68,7 @@
               <button>Submit</button>
             </p>
             <p>
-              <button class="button is-primary mt-4 has-background-white has-text-centered " id="search" style="width: 234px;"><a href="search.html">Enter</a></button>
+              <button class="button is-primary mt-4 has-background-white has-text-centered " id="search" style="width: 234px;"><a href="search.html">Enter Speakeasy</a></button>
               </button>
             </p>
           </form>
