added animation grid is so sick

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h1>Speakeasy</h1>
             <nav>
               <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="search.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Resources</a></li>
@@ -38,44 +38,56 @@
             <li>a password, specific handshake or secret knock was required</li>
           </ul>
         </div>
-        <form>
-          <h3>Add a Comment:</h3>
-            <p>
-              <label for="username">Name:</label>
-              <input class="text-input" id="username" type="text" placeholder="First Last" />
-            </p>
-            <p>
-              <label for="email">E-mail:</label>
-              <input class="text-input" id="email" type="text" placeholder="me@example.com" />
-            </p>
-            <p class="flex-row">
-              <label for="expertise">What kind of drink would you like:</label>
-              <select id="expertise">
-                <option>Beer</option>
-                <option>Wine</option>
-                <option selected>Cocktail</option>
-              </select>
-            </p>
-            <p>
-              <label for="comment">Comment:</label>
-              <textarea class="text-input" id="comment" placeholder="I like martini cocktails!"></textarea>
-            </p>
-            <p class="flex-row">
-              <input class="checkbox" id="agreement" type="checkbox" />
-              <label for="agreement">I agree to share my e-mail address with Speakeasy</label>
-            </p>
-            <p>
-              <button>Submit</button>
-            </p>
-            <p>
-              <button class="button is-primary mt-4 has-background-white has-text-centered " id="search" style="width: 234px;"><a href="search.html">Enter Speakeasy</a></button>
-              </button>
-            </p>
-          </form>
+
+
+        <body>
+          <div class="grid">
+            <div class="item" tabindex="0">
+              <p>Margarita</p>
+              <p class="color">black</p>
+            </div>
+            <div class="item" tabindex="0">
+              <p>Cosmopolitan</p>
+              <p class="color">ashphalt</p>
+            </div>
+            <div class="item" tabindex="0">
+              <p>Daiquiri</p>
+              <p class="color">Grape</p>
+            </div>
+            <div class="item" tabindex="0">
+              <p>Gimlet</p>
+              <p class="color">Leopard</p>
+            </div>
+            <div class="item" tabindex="0">
+              <p>Manhattan</p>
+              <p class="color">Wheat</p>
+            </div>
+            <div class="item" tabindex="0">
+              <p>Negroni</p>
+              <p class="color">zebra</p>
+            </div>
+            <div class="item" tabindex="0">
+              <p>Old Fashioned</p>
+              <p class="color">React Camo</p>
+            </div>
+            <div class="item" tabindex="0">
+              <p>Sex on the Beach</p>
+              <p class="color">Galaxy</p>
+            </div>
+            <div class="item" tabindex="0">
+              <p>Mimosa</p>
+              <p class="color">Black Gold</p>
+            </div>
+          </div>
+        
+     
         </article>
       </section>       
     </main>
-
+    <p>
+      <button class="button is-primary mt-4 has-text-centered " id="search" style="width: 234px;"><a href="search.html">Enter Speakeasy</a></button>
+      </button>
+    </p>
 
   <footer class="footer has-background-black">
 
