added a cool grid with transition to index.html

--- a/index.html
+++ b/index.html
@@ -44,39 +44,39 @@
           <div class="grid">
             <div class="item" tabindex="0">
               <p>Margarita</p>
-              <p class="color">black</p>
+              <p class="color">light green</p>
             </div>
             <div class="item" tabindex="0">
               <p>Cosmopolitan</p>
-              <p class="color">ashphalt</p>
+              <p class="color">Pink</p>
             </div>
             <div class="item" tabindex="0">
               <p>Daiquiri</p>
-              <p class="color">Grape</p>
+              <p class="color">White</p>
             </div>
             <div class="item" tabindex="0">
               <p>Gimlet</p>
-              <p class="color">Leopard</p>
+              <p class="color">Jade</p>
             </div>
             <div class="item" tabindex="0">
               <p>Manhattan</p>
-              <p class="color">Wheat</p>
+              <p class="color">Golden</p>
             </div>
             <div class="item" tabindex="0">
               <p>Negroni</p>
-              <p class="color">zebra</p>
+              <p class="color">Red</p>
             </div>
             <div class="item" tabindex="0">
               <p>Old Fashioned</p>
-              <p class="color">React Camo</p>
+              <p class="color">Caramel</p>
             </div>
             <div class="item" tabindex="0">
               <p>Sex on the Beach</p>
-              <p class="color">Galaxy</p>
+              <p class="color">Orange Yellow</p>
             </div>
             <div class="item" tabindex="0">
               <p>Mimosa</p>
-              <p class="color">Black Gold</p>
+              <p class="color">Yellow</p>
             </div>
           </div>
         
