reading script.js

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
       </section>       
     </main>
     <p>
-      <button class="button is-primary mt-4 has-text-centered " id="search" style="width: 234px;"><a href="search.html">Enter Speakeasy</a></button>
+      <button class="button is-primary mt-4 has-text-centered" id="search" style="width: 234px; background-color: #d100a6;">
+        <a href="search.html">Enter Speakeasy</a>
+      </button>
       </button>
     </p>
 
