centered the search input with bulma docs

--- a/search.html
+++ b/search.html
@@ -41,11 +41,9 @@
                     </div>
                     <br>
                     <br>
-                    <div class="field has-addons">
+                    <div class="field has-addons" id="search">
                       <div class="control">
-                        <input id="userInput" class="input" type="text" style="width:280px" placeholder="What'll You Have?">
-                      </div>
-                      <div class="control">
+                        <input class="input is-normal" type="text" placeholder="What'll You Have?">
                         <a class="button is-primary has-background-danger has-text-centered" id="search">Search</a>
                       </div>
                     </div>
