removed div and make header responsive

--- a/search.html
+++ b/search.html
@@ -16,10 +16,9 @@
   <body>
     <!-- hero class of header  -->
     <div class="container">
-    <section class="hero columns is-mobile">
-      <div class="hero-body column">
-        <div class="is-marginless heading">
-          <figure class="logo has-text-white"> <h6 class="speakeasy">Speakeasy</h6> </figure>
+    <section class="section hero is-mobile">
+      <div class="hero heading">
+          <figure class="logo has-text-white"> <h1 class="speakeasy">Speakeasy</h1> </figure>
           </figure>
           <figure class="subtitle has-text-white"> <h2>The place to get information about any drink</h2> </figure>
           </figure>
@@ -27,8 +26,8 @@
         </div>
     </section>
 
-      <section class="container">
-        <div class="columns">
+      <section class="section">
+        <div class="container">
           <div class="column is-vcentered">
             <div class="tile is-size-5-mobile">
               <div class="tile is-parent is-vertical is-size-5-mobile">
