centering header items in home page

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
   <body>
     <header>
         <i class="fa-solid fa-martini-glass fa-2xl"></i>
-          <h1>Speakeasy</h1>
+          <figure class="logo has-text-white"> <h1 class="speakeasy">Speakeasy</h1> </figure>
+          <figure class="subtitle has-text-white"> <h2>The place to get information about any drink</h2> </figure>
             <nav>
               <ul>
-                <li><a href="search.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Resources</a></li>
+                <li><a href="search.html">Search</a></li>
               </ul>
             </nav>
     </header>
