--- a/search.html
+++ b/search.html
@@ -3,28 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Speakeasy</title>
-    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://kit.fontawesome.com/7c84e92252.js"></script>
   </head>
 
   <body>
     <!-- hero class of header  -->
-    <div class="container">
-    <section class="section hero">
-      <div class="hero heading">
+    <header>
+      <i class="fa-solid fa-martini-glass fa-2xl"></i>
           <figure class="logo has-text-white"> <h1 class="speakeasy">Speakeasy</h1> </figure>
           <figure class="subtitle has-text-white"> <h2>The place to get information about any drink</h2> </figure>
-          </figure>
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="search.html">Search</a></li>
+            </ul>
+          </nav>
           </div>
         </div>
-    </section>
-
+      </header>
+    <main>
+    
       <section class="section">
         <div class="container">
           <div class="column is-vcentered">
