added coctail ingredients

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
           <div class="grid">
             <div class="item" tabindex="0">
               <p>Margarita</p>
-              <p class="color">light green</p>
+              <p class="color">2 oz tequila</p>
+              <p class="color">1 oz lime juise (freshly squeeze)</p>
+              <p class="color">1 oz triple sec (or Contreau)</p>
+              <p class="color">Salt for rimming the glass</p>
             </div>
             <div class="item" tabindex="0">
               <p>Cosmopolitan</p>
