--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
         <body>
           <div class="grid">
+            <!-- Margarita -->
             <div class="item" tabindex="0">
               <p>Margarita</p>
               <p class="color">2 oz tequila</p>
@@ -50,37 +51,73 @@
               <p class="color">1 oz triple sec (or Contreau)</p>
               <p class="color">Salt for rimming the glass</p>
             </div>
+             <!-- Cosmopolitan -->
             <div class="item" tabindex="0">
               <p>Cosmopolitan</p>
-              <p class="color">Pink</p>
+              <p class="color">1 1/2 oz vodka</p>
+              <p class="color">1 oz triple sec</p>
+              <p class="color">1/2 oz cranberry juice</p>
+              <p class="color">1/2 oz fresh lime juice</p>
             </div>
+            <!-- Mojito -->
             <div class="item" tabindex="0">
-              <p>Daiquiri</p>
-              <p class="color">White</p>
+              <p>Mojito</p>
+              <p class="color">2 oz white rum</p>
+              <p class="color">1 oz lime juice</p>
+              <p class="color">2 tsp sugar</p>
+              <p class="color">6-8 fresh mint leaves</p>
+              <p class="color">soda water</p>
+              <p class="color">ice</p>
             </div>
-            <div class="item" tabindex="0">
-              <p>Gimlet</p>
-              <p class="color">Jade</p>
-            </div>
-            <div class="item" tabindex="0">
-              <p>Manhattan</p>
-              <p class="color">Golden</p>
-            </div>
-            <div class="item" tabindex="0">
-              <p>Negroni</p>
-              <p class="color">Red</p>
-            </div>
+            <!-- Old Fashioned -->
             <div class="item" tabindex="0">
               <p>Old Fashioned</p>
-              <p class="color">Caramel</p>
+              <p class="color">2 oz bourbon or rye whiskey</p>
+              <p class="color">1 sugar cube</p>
+              <p class="color">2-3 dashes Angostura bitters</p>
+              <p class="color">Orange twist</p>
+              <p class="color">Ice</p>
             </div>
+            <!-- Manhattan -->
             <div class="item" tabindex="0">
-              <p>Sex on the Beach</p>
-              <p class="color">Orange Yellow</p>
+              <p>Manhattan</p>
+              <p class="color">5 dashes of bitters</p>
+              <p class="color">3/4 oz sweet vermouth</p>
+              <p class="color">2 oz bourbon</p>
+              <p class="color">ice and stir until color change</p>
+              <p class="color">Garnish with Dehydrated orange put cherry on top</p>
             </div>
+            <!-- Negroni -->
             <div class="item" tabindex="0">
-              <p>Mimosa</p>
-              <p class="color">Yellow</p>
+              <p>Negroni</p>
+              <p class="color">1 oz gin</p>
+              <p class="color">1 oz campari</p>
+              <p class="color">1 oz sweet vermouth</p>
+              <p class="color">Ice</p>
+            </div>
+            <!-- Daiquiri -->
+            <div class="item" tabindex="0">
+              <p>Daiquiri</p>
+              <p class="color">2 oz white rum</p>
+              <p class="color">1 oz lime juice</p>
+              <p class="color">3/4 oz simple syrup</p>
+            </div>
+            <!-- Whiskey Sour-->
+            <div class="item" tabindex="0">
+              <p>Whiskey Sour</p>
+              <p class="color">2 oz bourbon</p>
+              <p class="color">3/4 oz fresh lemon juice</p>
+              <p class="color">1/2 oz simple syrup</p>
+              <p class="color">Egg white (optional)</p>
+              <p class="color">Ice</p>
+            </div>
+            <!-- Pina colada-->
+            <div class="item" tabindex="0">
+              <p>Pina Colada</p>
+              <p class="color">2 oz light rum</p>
+              <p class="color">1 oz coconut cream</p>
+              <p class="color">3 oz pineapple juice</p>
+              <p class="color">Crushed ice</p>
             </div>
           </div>
         
