--- a/about.html
+++ b/about.html
@@ -281,3 +281,33 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                <strong class="has-text-light">Speakeasy</strong> by 
+                <a href="https://github.com/jkanvision/The-SpeakEasy-Project" class="has-text-danger">Martini Coders</a>. 
+                The source code is licensed <a href="http://opensource.org/licenses/mit-license.php" class="has-text-danger">MIT</a>.
+            </p>
+        </div>
+    </footer>
+
+    <script>
+        // Mobile menu functionality
+        document.addEventListener('DOMContentLoaded', () => {
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+            
+            if ($navbarBurgers.length > 0) {
+                $navbarBurgers.forEach( el => {
+                    el.addEventListener('click', () => {
+                        const target = el.dataset.target;
+                        const $target = document.getElementById(target);
+                        el.classList.toggle('is-active');
+                        $target.classList.toggle('is-active');
+                    });
+                });
+            }
+        });
+    </script>
+</body>
