--- a/index.html
+++ b/index.html
@@ -5,25 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Speakeasy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/cover.css">
-    <script src="https://kit.fontawesome.com/7c84e92252.js"></script>
   </head>  
 
   <body>
-    <header>
-        <i class="fa-solid fa-martini-glass fa-2xl"></i>
-          <figure class="logo has-text-white"> <h1 class="speakeasy">Speakeasy</h1> </figure>
-          <figure class="subtitle has-text-white"> <h2>The place to get information about any drink</h2> </figure>
-            <nav>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="search.html">Search</a></li>
-              </ul>
-            </nav>
-    </header>
+  
     
     <main>
       <section>
