changed the history section to match consistent design

--- a/index.html
+++ b/index.html
@@ -53,23 +53,27 @@
               </div>
           </div>
       </section>
+
+      <!-- Main Content -->
+      <section class="section">
+          <div class="container">
+              <!-- Project Info -->
+              <div class="columns is-centered">
+                  <div class="column is-two-thirds">
+                      <div class="card">
+                          <div class="card-content">
+                              <h3 class="title is-4 has-text-light has-text-centered">UCF Coding Bootcamp Project 1</h3>
+                              <p class="has-text-light">
+                                  The phrase "Speakeasy" originates from a term that bartenders used where people needed to
+                                  "speak easy" (quietly) when ordering at the bar in order to not draw attention to the 
+                                  prohibited act of buying alcohol. In order to gain access to these illicit bars, a password, 
+                                  specific handshake or secret knock was required.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
     
-    <main>
-      <section>
-        <article>
-          <h3>UCF Coding Bootcamp Project 1</h3>
-        <div>
-          <p>The phrase, 'Speakeasy' originates from a term that bartenders used where people needed to</p> 
-          <h3>“Speakeasy” (quietly)</h3>
-          <ul>
-            <li>when ordering at the bar in order to not draw attention</li> 
-            <li>to the prohibited act of buying alcohol</li>
-            <li>In order to gain access to these illicit bars</li> 
-            <li>a password, specific handshake or secret knock was required</li>
-          </ul>
-        </div>
-
-
         <body>
           <div class="grid">
             <!-- Margarita -->
