replaced complex CSS grid with a simpler, more elegant card-based layout that shows ingredients on hover

--- a/index.html
+++ b/index.html
@@ -73,17 +73,25 @@
                       </div>
                   </div>
               </div>
+
+               <!-- Cocktail Grid -->
+            <h2 class="title is-2 has-text-light has-text-centered mt-6">Popular Cocktails</h2>
+            <p class="subtitle has-text-centered">Hover over each cocktail to see ingredients</p>
     
-        <body>
-          <div class="grid">
-            <!-- Margarita -->
-            <div class="item" tabindex="0">
-              <p>Margarita</p>
-              <p class="color">2 oz tequila</p>
-              <p class="color">1 oz lime juise (freshly squeeze)</p>
-              <p class="color">1 oz triple sec (or Contreau)</p>
-              <p class="color">Salt for rimming the glass</p>
-            </div>
+            <div class="cocktail-grid">
+                <!-- Margarita -->
+                <div class="cocktail-card" style="background-image: url('./assets/Images/Margarita_Popular_Classic_Cocktail_large.webp');">
+                    <div class="cocktail-info">
+                        <h3 class="cocktail-name">Margarita</h3>
+                        <div class="cocktail-ingredients">
+                            <p>2 oz tequila</p>
+                            <p>1 oz lime juice (freshly squeezed)</p>
+                            <p>1 oz triple sec (or Cointreau)</p>
+                            <p>Salt for rimming the glass</p>
+                        </div>
+                    </div>
+                </div>
+
              <!-- Cosmopolitan -->
             <div class="item" tabindex="0">
               <p>Cosmopolitan</p>
