added link to home in the search page

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
                 </div>
 
                 <!-- Espresso Martini -->
-                <div class="cocktail-card" style="background-image: url('./assets/Images/__opt__aboutcom__coeus__resources__content_migration__liquor__2018__01__02100107__espresso-martini-720x720-recipe-Molly-91088f219114414fb063eaab822c619c.webp');">
-                    <div class="cocktail-info">
-                        <h3 class="cocktail-name">Espresso Martini</h3>
+                <div class="cocktail-card" style="background-image: url('./assets/Images/espresso-martini-3-1200.jpg');">
+                  <div class="cocktail-info">
+                    <h3 class="cocktail-name">Espresso Martini</h3>
                         <div class="cocktail-ingredients">
                             <p>2 oz vodka</p>
                             <p>1/2 oz coffee liqueur(usually Kahlua)</p>
