--- a/search.html
+++ b/search.html
@@ -175,7 +175,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="container">
           <div class="navbar-brand">
-              <a class="navbar-item" href="#">
+              <a class="navbar-item" href="index.html">
                   <i class="fa-solid fa-martini-glass-citrus fa-2x" style="color: #e94560;"></i>
                   <span class="logo-text ml-2">Speakeasy</span>
               </a>
